--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     <div class="project-img">
                         <div class="project-overlay">
                             <a href="https://github.com/kumaresanc746/grocery-store.git" target="_blank"
-                                class="btn btn-small"></a>
+                                class="btn btn-small">View Code</a>
                         </div>
                         <i class="fas fa-shopping-cart project-placeholder-icon"></i>
                     </div>
@@ -175,7 +175,7 @@
                     <div class="project-img">
                         <div class="project-overlay">
                             <a href="https://github.com/kumaresanc746/REAL-TIME-MULTIPLAYER-GAME-BACKEND-WITH-AWS-GAMELIFT-LAMBDA-AND-API-GATEWAY.git"
-                                target="_blank" class="btn btn-small"></a>
+                                target="_blank" class="btn btn-small">View Code</a>
                         </div>
                         <i class="fas fa-gamepad project-placeholder-icon"></i>
                     </div>
@@ -276,6 +276,5 @@
 
     <script src="js/script.js"></script>
 </body>
-
 
 </html>
