--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <nav class="nav-links">
                 <a href="#about" class="nav-link">About</a>
                 <a href="#skills" class="nav-link">Skills</a>
+                <a href="#certifications" class="nav-link">Certifications</a>
                 <a href="#projects" class="nav-link">Projects</a>
                 <a href="#experience" class="nav-link">Experience</a>
                 <a href="#contact" class="nav-link">Contact</a>
@@ -78,7 +79,7 @@
                         <h3>Education</h3>
                         <p>M.Sc. Computer Science & Technology<br>2020 – 2025 | Grade: 70%</p>
                     </div>
-                    <div class="about-card">
+                    <div class="about-card" onclick="location.href='#certifications'" style="cursor: pointer;">
                         <i class="fas fa-certificate"></i>
                         <h3>Certification</h3>
                         <p>AWS & DevOps - Login360</p>
@@ -135,6 +136,42 @@
                         <span>Adaptability</span>
                         <span>Teamwork</span>
                         <span>Critical Thinking</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Certifications Section -->
+    <section id="certifications" class="cert-section section">
+        <div class="container">
+            <div class="section-title reveal">
+                <h2>Certifications</h2>
+                <div class="underline"></div>
+            </div>
+            <div class="cert-grid">
+                <!-- AWS Certification -->
+                <div class="cert-card reveal">
+                    <div class="cert-icon">
+                        <i class="fab fa-aws"></i>
+                    </div>
+                    <div class="cert-info">
+                        <h3>AWS Certification</h3>
+                        <p>Login360 - AWS Solutions Architecture & Services</p>
+                        <a href="kumaresan-aws--separatedevops.pdf" class="btn btn-secondary btn-small-text"
+                            target="_blank">View Certificate</a>
+                    </div>
+                </div>
+                <!-- DevOps Certification -->
+                <div class="cert-card reveal">
+                    <div class="cert-icon">
+                        <i class="fas fa-infinity"></i>
+                    </div>
+                    <div class="cert-info">
+                        <h3>DevOps Certification</h3>
+                        <p>Login360 - DevOps Engineering & Automation</p>
+                        <a href="kumaresan-devops-separateaws.pdf" class="btn btn-secondary btn-small-text"
+                            target="_blank">View Certificate</a>
                     </div>
                 </div>
             </div>
