--- a/index.html
+++ b/index.html
@@ -282,15 +282,16 @@
                             Profile</a>
                     </div>
                 </div>
-                <form id="contact-form" class="contact-form reveal">
+                <form id="contact-form" action="https://formspree.io/f/mlggrddk" method="POST"
+                    class="contact-form reveal">
                     <div class="form-group">
-                        <input type="text" id="name" placeholder="Your Name" required>
+                        <input type="text" id="name" name="name" placeholder="Your Name" required>
                     </div>
                     <div class="form-group">
-                        <input type="email" id="email" placeholder="Your Email" required>
+                        <input type="email" id="email" name="email" placeholder="Your Email" required>
                     </div>
                     <div class="form-group">
-                        <textarea id="message" rows="5" placeholder="Your Message" required></textarea>
+                        <textarea id="message" name="message" rows="5" placeholder="Your Message" required></textarea>
                     </div>
                     <button type="submit" class="btn btn-primary">Send Message</button>
                     <div id="form-status"></div>
